feat: add logo to header component

--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,14 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+          "assets": [
+            {
+              "glob": "**/*",
+              "input": "public"
+            },
+            "src/assets"
+          ],
+
             "styles": [
               "src/styles.scss"
             ]
